--- a/app/src/main/res/layout/activity_historique_reception_commande.xml
+++ b/app/src/main/res/layout/activity_historique_reception_commande.xml
@@ -16,7 +16,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="HISTORIQUE Commande"
+            android:text="RECEPTION Commande"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textStyle="bold"
             android:textColor="#fff"
