--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
     android:orientation="vertical">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:logo="@drawable/teliyapharma" />
+
+    </android.support.design.widget.AppBarLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -451,7 +466,7 @@
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
                         android:layout_marginTop="10dp"
-                        android:text="@string/fournisseurs"/>
+                        android:text="Grossiste"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -461,7 +476,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="@string/gestionDesFournisseur"
+                        android:text="Gestion des Grossiste"
                         android:padding="5dp"
                         android:textColor="@android:color/darker_gray"/>
 
@@ -635,7 +650,7 @@
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
                         android:layout_marginTop="10dp"
-                        android:text="Log"/>
+                        android:text="Consultation de prix"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -645,7 +660,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="@string/voireLog"
+                        android:text="Consulter"
                         android:padding="5dp"
                         android:textColor="@android:color/darker_gray"/>
 
@@ -701,4 +716,4 @@
 
 
     </ScrollView>
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
