--- a/app/src/main/res/menu/main_menu_items.xml
+++ b/app/src/main/res/menu/main_menu_items.xml
@@ -2,8 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-
+    <item
+        android:id="@+id/itemAlert"
+        android:title="Alert"
+        android:icon="@android:drawable/ic_popup_reminder"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/itemDeconnecter"
         android:title="@string/deconnexion"
