--- a/app/src/main/res/layout/activity_ajout_quantite_produit_commande.xml
+++ b/app/src/main/res/layout/activity_ajout_quantite_produit_commande.xml
@@ -26,43 +26,22 @@
             android:orientation="horizontal"
             android:gravity="start"
             android:layout_weight="1"
+            android:layout_gravity="center"
             >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/fournisseurs"
-                />
-            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
-                android:id="@+id/grossisteSelect"
-                />
-        </LinearLayout>
+                android:text="Ajout Quantite"
+                android:gravity="center"
+                android:textSize="19sp"
+                android:layout_gravity="center"
+                android:textStyle="bold"
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="horizontal"
-            android:gravity="end"
-            android:layout_weight="1"
-            >
-
-            <EditText
-                android:id="@+id/rechercheProduitCommande"
-                android:layout_width="370dp"
-                android:layout_height="wrap_content"
-                android:hint="Rechercher un produit"
-                android:drawableRight="@drawable/ic_search_black_24dp"
                 />
-
         </LinearLayout>
 
     </LinearLayout>
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -74,12 +53,11 @@
         android:layout_centerInParent="true"
         >
 
-        <GridView
-            android:id="@+id/gridNewCommande"
+        <ListView
+            android:id="@+id/listeProduitCommande"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="#e6e6e6"
-            android:numColumns="4"
             />
     </LinearLayout>
 
