--- a/app/src/main/res/layout/activity_historique_commande.xml
+++ b/app/src/main/res/layout/activity_historique_commande.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".commande.HistoriqueCommandeActivity"
-    android:orientation="vertical"
-    android:background="@color/backgroundcolor">
-
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/backgroundcolor"
+              android:padding="5dp"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +16,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/historiqueCommande"
+            android:text="HISTORIQUE Commande"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textStyle="bold"
             android:textColor="#fff"
@@ -30,19 +29,20 @@
         android:layout_height="wrap_content"
         android:gravity="start"
         android:layout_margin="5dp"
+
         >
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_weight="1"
             >
             <Button
-                android:id="@+id/creer_vente"
+                android:id="@+id/creer_commande"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/creerCommande"
+                android:text="CREER COMMANDE"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textStyle="bold"
                 android:padding="10dp"
@@ -62,11 +62,11 @@
             android:gravity="end"
             >
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/edRecherche"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/rechercherCommande"
+                android:ems="15"
+                android:hint="Rechercher une commande"
                 android:drawableEnd="@drawable/ic_search_black_24dp"
                 android:background="#FFF"
                 android:layout_marginTop="12.5dp"
@@ -77,24 +77,25 @@
 
 
         </LinearLayout>
-
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_margin="5dp"
-        >
+        android:layout_margin="5dp">
 
         <GridView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:numColumns="4"
-            android:id="@+id/gridHistoCmnd">
+            android:padding="5dp"
+            android:id="@+id/gridHistoriqueCommande">
 
         </GridView>
 
     </LinearLayout>
+
+
 
 </LinearLayout>
