--- a/app/src/main/res/layout/activity_nouvelle_commande.xml
+++ b/app/src/main/res/layout/activity_nouvelle_commande.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,6 +16,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:background="#e6e6e6"
+        android:layout_alignParentTop="true"
 
         >
         <LinearLayout
@@ -32,11 +33,11 @@
                 android:layout_height="wrap_content"
                 android:text="@string/fournisseurs"
                 />
-            <EditText
+            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
-
+                android:id="@+id/grossisteSelect"
                 />
         </LinearLayout>
 
@@ -49,57 +50,36 @@
             android:layout_weight="1"
             >
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/dateCommande"
-                />
             <EditText
-                android:layout_width="300dp"
+                android:id="@+id/rechercheProduitCommande"
+                android:layout_width="370dp"
                 android:layout_height="wrap_content"
-                android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
-
+                android:hint="Rechercher un produit"
+                android:drawableRight="@drawable/ic_search_black_24dp"
                 />
+
         </LinearLayout>
 
     </LinearLayout>
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="495dp"
         android:gravity="end"
         android:layout_margin="15dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-
+        android:layout_centerInParent="true"
         >
 
-        <Button
+        <GridView
+            android:id="@+id/gridNewCommande"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="@string/article"
-            android:drawableEnd="@drawable/ic_add_black_24dp"
-            android:background="#035871"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="end"
-        android:layout_margin="15dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-
-        >
-
-        <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="300dp"
+            android:layout_height="match_parent"
             android:background="#e6e6e6"
+            android:numColumns="4"
             />
     </LinearLayout>
 
@@ -110,19 +90,21 @@
         android:layout_margin="15dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_alignParentBottom="true"
 
         >
 
         <Button
+            android:id="@+id/commandeSuivant"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="15dp"
-            android:text="@string/validerCommande"
+            android:text="Suivant "
             android:drawableEnd="@drawable/ic_add_black_24dp"
-            android:background="#2c4d02"
+            android:background="#2eb5af"
             android:textColor="#fff"
             android:textStyle="bold"
             />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
