--- a/app/src/main/res/layout/activity_paiement_vente.xml
+++ b/app/src/main/res/layout/activity_paiement_vente.xml
@@ -23,6 +23,8 @@
             android:padding="5dp"
             android:gravity="center"
             android:layout_marginBottom="8dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
             android:paddingBottom="5dp"
             >
 
@@ -31,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="IMPRIMER TICKET"
+                android:text="PAIEMENT"
                 android:textColor="@color/primaryDark"
                 android:textSize="19sp"
                 android:textStyle="bold"
@@ -46,81 +48,96 @@
             android:background="#fff"
             android:weightSum="2"
             android:padding="20dp"
-            android:orientation="vertical"
-            android:layout_marginBottom="1dp"
+            android:orientation="horizontal"
+            android:layout_marginBottom="8dp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_vertical"
             >
 
             <TextView
-                android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Date ex: 01/01/2018"
-                android:padding="1dp"
-                android:layout_weight="1"
-
-                />
-            <TextView
-                android:id="@+id/nomPharmacie"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Telya Pharma"
-                android:padding="5dp"
-                android:layout_weight="1"
-
-                />
-            <TextView
-                android:id="@+id/valeurNomClient"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tel : +224 622-35-03-75"
-                android:padding="5dp"
-                android:layout_weight="1"
-
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#fff"
-            android:weightSum="2"
-            android:padding="20dp"
-            >
-            <ListView
-                android:layout_width="wrap_content"
-                android:layout_height="200dp"
-                android:id="@+id/listeProduit">
-
-            </ListView>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#fff"
-            android:weightSum="2"
-            android:padding="20dp"
-            android:layout_marginTop="2dp"
-            >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Total : "
-                android:padding="15dp"
-                android:layout_weight="1"
+                android:gravity="center"
+                android:text="DÛE :"
                 android:textColor="@color/primaryDark"
+                android:textSize="16sp"
+                android:layout_marginEnd="15dp"
+                android:textStyle="bold"
                 />
-
             <TextView
-                android:id="@+id/montant"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="450 000 GNF"
-                android:padding="15dp"
-                android:layout_weight="1"
+                android:gravity="center"
+                android:text="100.000 GNF"
+                android:textColor="@color/primaryDark"
+                android:textSize="16sp"
+                android:layout_marginStart="5dp"
+                android:textStyle="bold"
+                android:id="@+id/due"
                 />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#fff"
+            android:weightSum="2"
+            android:padding="20dp"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="8dp"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Donné :"
+                android:textColor="@color/primaryDark"
+                android:textSize="16sp"
+                android:layout_marginEnd="15dp"
+                android:textStyle="bold"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/donne"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#fff"
+            android:weightSum="2"
+            android:padding="20dp"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="CHANGE :"
+                android:textColor="@color/primaryDark"
+                android:textSize="16sp"
+                android:layout_marginEnd="15dp"
+                android:textStyle="bold"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="100.000 GNF"
+                android:textColor="@color/primaryDark"
+                android:textSize="16sp"
+                android:layout_marginStart="5dp"
+                android:textStyle="bold"
+                android:id="@+id/change"
+                />
+
         </LinearLayout>
 
     </LinearLayout>
