--- a/app/src/main/res/layout/custom_adding_quantite.xml
+++ b/app/src/main/res/layout/custom_adding_quantite.xml
@@ -24,6 +24,18 @@
         android:orientation="horizontal">
 
         <EditText
+
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Prix Unitaire"
+            android:id="@+id/puProduit"
+            android:inputType="number"
+            android:imeActionLabel="@string/valider"
+            android:layout_marginEnd="15dp"
+            />
+
+        <EditText
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
