--- a/app/src/main/res/layout/custom_vente_grid_home.xml
+++ b/app/src/main/res/layout/custom_vente_grid_home.xml
@@ -42,9 +42,21 @@
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="5dp"
                         android:layout_gravity="start"
-                        android:text="User"
+                        android:text="Produit"
                         android:id="@+id/produitLib"/>
 
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:layout_margin="5dp"
+                    >
+                    <CheckBox
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/checkProduit"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -52,33 +64,32 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/lightgray"
-                android:layout_margin="5dp"/>
+                android:layout_margin="1dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:orientation="horizontal"
                 >
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:textStyle="bold"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="5dp"
                         android:layout_gravity="end"
-                        android:text="12.500 GNF"
+                        android:text="Prix unitaire"
                         android:id="@+id/montant"/>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="end"
-                    android:text="Quantite"
-                    android:padding="5dp"
-                    android:textColor="#000"
-                    android:layout_weight="1"
                     android:id="@+id/quantiteProduit"
-                    />
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:paddingEnd="5dp"
+                    android:text="Quantite"
+                    android:textColor="#000" />
 
             </LinearLayout>
         </LinearLayout>
