--- a/app/src/main/res/layout/custum_grid_inventaire.xml
+++ b/app/src/main/res/layout/custum_grid_inventaire.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:background="@color/colorAccent"
+                android:background="@color/custumColore"
                 >
 
                 <LinearLayout
